# atividade_3

./: .env.example  .gitignore  Cargo.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
cplex_installer/: response.properties
src/: lib.rs  main.rs
src/domain/: graph.rs
src/file_reader/: graph_file_entries.rs  graph_file_reader.rs  mod.rs
src/file_reader/tests/: graph_file_test.rs  mod.rs
src/file_reader/tests/fixtures/: graph_file.rs  mod.rs
src/heuristics/: clique.rs  greedy_solver.rs  mod.rs  solution.rs  weighted_graph.rs
src/heuristics/tests/: clique_test.rs  greedy_solver_test.rs  mod.rs  residual_graph_test.rs
src/heuristics/tests/fixtures/: mod.rs  weighted_graph.rs  weighted_graph_test.rs
src/lp_solver/: callbacks.rs  mod.rs  solver.rs
src/lp_solver/py_solver/: callback_library.py  graph.py  solver.py  user_cut.py
src/lp_solver/py_solver/tests/: test_shared_lib.py  test_user_cut.py
src/lp_solver/py_solver/tests/fixtures/: edges.py  graph.py  model.py  partial_sol.py
src/tests/: graph_file_test.rs  mod.rs
src/tests/fixtures/: graph_file.rs
