[package]
name = "graph_col_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
libc = "0.2.138"
rand = "0.8.5"
rand_chacha = "0.3.1"
rstest = "0.16.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.pyo3]
version = "0.17.3"
features = ["auto-initialize"]

[lib]
crate-type=["rlib", "cdylib"]
